Fixed text alignment for all pages

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ li {
 
 ul {
   padding: 20px;
-  margin-left: 535px;
+  margin-left: 870px;
 }
 
 a {
@@ -38,7 +38,7 @@ li:hover {
 }
 
 img {
-  margin: 30px 450px;
+  margin: 30px 750px;
   width: 400px;
   height: auto;
   border: 6px solid rgb(199, 129, 0);
@@ -48,7 +48,7 @@ img {
 h3 {
   background-color: rgb(228, 160, 59);
   text-align: center;
-  margin: 35px 530px 1px;
+  margin: 35px 850px 1px;
   padding: 10px;
   width: 200px;
 }
@@ -56,7 +56,7 @@ h3 {
 p {
   width: 600px;
   text-align: center;
-  margin: 15px 330px;
+  margin: 15px 650px;
 }
 
 ul.recipe-list {
@@ -68,12 +68,12 @@ ul.recipe-list {
   width: 400px;
   text-align: center;
   margin-bottom: -10px;
-  margin-left: -125px;
+  margin-left: -140px;
 }
 
 .recipe-steps li {
   width: 700px;
   text-align: center;
-  margin-left: 250px;
+  margin-left: 550px;
   margin-bottom: -10px;
 }
